# AmBe_Analysis

./: .gitignore  AmBeLinkDef.h  CMakeLists.txt  Cube counter.ipynb  FilterT1.ipynb  cube_backtrace.ipynb  cube_counter_raw.ipynb  trackid_check.ipynb
dataset/: dataset.md
include/: AmBe.hpp  column.hpp  constants.hpp  create_columns.hpp  load_dataset.hpp  plot.hpp  track_chain.hpp  transform.hpp  util.hpp
notebooks/: ComptonEdgeSignal.ipynb  EnergyContributionCE.ipynb  EnergyContributionGamma.ipynb  FilterT1.ipynb  GammaSignal.ipynb  NeutronMimick.ipynb  NeutronSignal.ipynb  NeutronSignalEQ.ipynb  Pure.ipynb  cube_backtrace.ipynb  cube_counter_epvt_filter.ipynb  cube_counter_raw.ipynb  firstFilterCut.ipynb  old__EventTriggerFilter.ipynb  peffForLERank.ipynb  peffForMECEcouple.ipynb  peffForMERank.ipynb  secondFilterCut.ipynb  trackid_check.ipynb
notebooks/Final/: Signal.ipynb  set_path.py
script/: _path.py  compton_edge.py  count_CE.py  distance_plot.py  efficiency_purity.py  energy_plots.py  generate_utils.py  lhcbstyle.C  root2txt.py  signal_distribution.py  signal_plot.py  utils.py
src/: create_columns.cpp  load_dataset.c  load_dataset.cpp  plot.cpp  track_chain.c  track_chain.cpp  transform.c  transform.cpp  util.cpp  volid.cpp
test/: track_chain.C
